Page overflow fix

--- a/sass/custom/custom.scss
+++ b/sass/custom/custom.scss
@@ -221,7 +221,7 @@ form.collapse {
   bottom:0;
   margin-top: 50px;
   padding-top:10px;
-  font-size: 1.1em;
+  font-size: 1.2em;
   text-align: center;
   width:100%; /*position absolute causes element's width to shink to contents, which breaks text align, so we set width*/
   background: $footerBgColor;
